# GDAL-correlator

./: .gitignore  Doxyfile  README.md  configure.ac  main.cpp
examples/: README.md  simple_cli.cpp
src/: GDALIntegralImage.cpp  Makefile.am
src/headers/: GDALCorrelator.h  GDALFeaturePoint.h  GDALFeaturePointsCollection.h  GDALIntegralImage.h  GDALMatchedPointsCollection.h  GDALOctaveLayer.h  GDALOctaveMap.h  GDALSimpleSURF.h
src/sources/: GDALCorrelator.cpp  GDALFeaturePoint.cpp  GDALFeaturePointsCollection.cpp  GDALIntegralImage.cpp  GDALMatchedPointsCollection.cpp  GDALOctaveLayer.cpp  GDALOctaveMap.cpp  GDALSimpleSURF.cpp
